--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^15.6.1",
     "react-apollo": "^1.4.2",
     "react-apollo-decorators": "^1.3.3",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
