--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "material-ui": "^0.18.3",
     "react": "^15.6.1",
     "react-apollo": "^1.4.2",
-    "react-apollo-decorators": "^1.3.3",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
